[tool.poetry]
name = "koxformatconverter"
version = "0.1.1"
description = ""
authors = ["Yongqing Ye <avatar.ye@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "3.12"

[tool.poetry.group.dev.dependencies]
pyinstaller = "^6.9.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
krun = "koxformatconverter.run:main"