[project]
name = "koxformatconverter"
version = "0.1.1"
description = "Convert Kox.moe ePub files to CBZ format"
authors = [
    {name = "Yongqing Ye", email = "avatar.ye@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.12,<3.15"
dependencies = [
    "rich>=13.7.0",
]

[project.scripts]
krun = "koxformatconverter.run:main"

[project.optional-dependencies]
dev = [
    "pyinstaller>=6.9.0",
]

[tool.poetry]
name = "koxformatconverter"
version = "0.1.1"
description = ""
authors = ["Yongqing Ye <avatar.ye@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.12,<3.15"
rich = "^13.7.0"

[tool.poetry.group.dev.dependencies]
pyinstaller = "^6.9.0"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = [
    "pyinstaller>=6.9.0",
]

[tool.poetry.scripts]
krun = "koxformatconverter.run:main"